--- a/processing_data.ipynb
+++ b/processing_data.ipynb
@@ -765,73 +765,332 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## IMDB Correlation Analysis"
+    "## Nicolas IMDB Correlation Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a copy of cleaned df for analysis\n",
+    "cor_df = cleaned_df.copy()\n",
+    "\n",
+    "# Ensure numeric data types for calculations\n",
+    "cor_df['votes'] = pd.to_numeric(cor_df['votes'], errors='coerce')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Ensure numeric data types for calculations\n",
-    "cor_df = cleaned_df.copy()\n",
-    "cor_df['votes'] = pd.to_numeric(cor_df['votes'], errors='coerce')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    year        budget  gross_us_canada  gross_world_wide  nominations  \\\n",
-      "0   2005  1.553998e+10     8.567808e+09      1.796892e+10         3045   \n",
-      "1   2006  2.200316e+10     8.978477e+09      1.929106e+10         3329   \n",
-      "2   2007  8.466157e+09     8.879567e+09      2.036523e+10         3259   \n",
-      "3   2008  1.085565e+10     9.469791e+09      2.188477e+10         3386   \n",
-      "4   2009  9.698641e+09     1.036045e+10      2.394694e+10         3664   \n",
-      "5   2010  1.104976e+10     1.004622e+10      2.441087e+10         4204   \n",
-      "6   2011  3.729829e+10     7.472151e+09      1.988084e+10         2851   \n",
-      "7   2012  6.613154e+09     1.985591e+09      4.990062e+09         2212   \n",
-      "8   2013  1.888163e+10     9.731557e+09      2.488176e+10         4201   \n",
-      "9   2014  1.168600e+10     1.066421e+10      2.744540e+10         4815   \n",
-      "10  2015  1.425943e+10     1.054386e+10      2.757694e+10         5199   \n",
-      "11  2016  3.318452e+10     1.148782e+10      3.115318e+10         5754   \n",
-      "12  2017  1.418178e+10     1.069296e+10      3.030480e+10         5089   \n",
-      "13  2018  8.690472e+10     1.117158e+10      2.961007e+10         5125   \n",
-      "14  2019  1.395318e+10     1.098970e+10      2.977597e+10         4900   \n",
-      "15  2020  3.040313e+09     1.380580e+09      4.357318e+09         1392   \n",
-      "16  2021  2.931237e+10     4.329346e+09      1.211961e+10         3778   \n",
-      "17  2022  7.954418e+10     7.190990e+09      1.789156e+10         4757   \n",
-      "18  2023  4.304218e+10     7.809360e+09      1.882849e+10         4202   \n",
-      "19  2024  3.152015e+11     7.325715e+09      1.605843e+10         2223   \n",
-      "\n",
-      "    oscars    votes    rating  \n",
-      "0       42  11291.0  6.246690  \n",
-      "1       51  13794.0  6.314013  \n",
-      "2       45  13020.0  6.313183  \n",
-      "3       47  14657.0  6.252698  \n",
-      "4       55  10982.0  6.320792  \n",
-      "5       54  14756.0  6.286851  \n",
-      "6       29   6515.0  6.176098  \n",
-      "7       22   8230.0  6.243503  \n",
-      "8       59  11874.0  6.394091  \n",
-      "9       44   2560.0  6.386166  \n",
-      "10      44   5446.0  6.487891  \n",
-      "11      50   8481.0  6.422264  \n",
-      "12      45   5638.0  6.429018  \n",
-      "13      29   2000.0  6.379710  \n",
-      "14      23   3746.0  6.297238  \n",
-      "15      10   3774.0  5.919753  \n",
-      "16      35   3975.0  6.399091  \n",
-      "17      44   1291.0  6.492969  \n",
-      "18      26   5010.0  6.368310  \n",
-      "19       0   5210.0  6.304545  \n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>budget</th>\n",
+       "      <th>gross_us_canada</th>\n",
+       "      <th>gross_world_wide</th>\n",
+       "      <th>nominations</th>\n",
+       "      <th>oscars</th>\n",
+       "      <th>votes</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2005</td>\n",
+       "      <td>1.553998e+10</td>\n",
+       "      <td>8.567808e+09</td>\n",
+       "      <td>1.796892e+10</td>\n",
+       "      <td>3045</td>\n",
+       "      <td>42</td>\n",
+       "      <td>11291.0</td>\n",
+       "      <td>6.246690</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2006</td>\n",
+       "      <td>2.200316e+10</td>\n",
+       "      <td>8.978477e+09</td>\n",
+       "      <td>1.929106e+10</td>\n",
+       "      <td>3329</td>\n",
+       "      <td>51</td>\n",
+       "      <td>13794.0</td>\n",
+       "      <td>6.314013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>8.466157e+09</td>\n",
+       "      <td>8.879567e+09</td>\n",
+       "      <td>2.036523e+10</td>\n",
+       "      <td>3259</td>\n",
+       "      <td>45</td>\n",
+       "      <td>13020.0</td>\n",
+       "      <td>6.313183</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>1.085565e+10</td>\n",
+       "      <td>9.469791e+09</td>\n",
+       "      <td>2.188477e+10</td>\n",
+       "      <td>3386</td>\n",
+       "      <td>47</td>\n",
+       "      <td>14657.0</td>\n",
+       "      <td>6.252698</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>9.698641e+09</td>\n",
+       "      <td>1.036045e+10</td>\n",
+       "      <td>2.394694e+10</td>\n",
+       "      <td>3664</td>\n",
+       "      <td>55</td>\n",
+       "      <td>10982.0</td>\n",
+       "      <td>6.320792</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>1.104976e+10</td>\n",
+       "      <td>1.004622e+10</td>\n",
+       "      <td>2.441087e+10</td>\n",
+       "      <td>4204</td>\n",
+       "      <td>54</td>\n",
+       "      <td>14756.0</td>\n",
+       "      <td>6.286851</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>3.729829e+10</td>\n",
+       "      <td>7.472151e+09</td>\n",
+       "      <td>1.988084e+10</td>\n",
+       "      <td>2851</td>\n",
+       "      <td>29</td>\n",
+       "      <td>6515.0</td>\n",
+       "      <td>6.176098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>6.613154e+09</td>\n",
+       "      <td>1.985591e+09</td>\n",
+       "      <td>4.990062e+09</td>\n",
+       "      <td>2212</td>\n",
+       "      <td>22</td>\n",
+       "      <td>8230.0</td>\n",
+       "      <td>6.243503</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>1.888163e+10</td>\n",
+       "      <td>9.731557e+09</td>\n",
+       "      <td>2.488176e+10</td>\n",
+       "      <td>4201</td>\n",
+       "      <td>59</td>\n",
+       "      <td>11874.0</td>\n",
+       "      <td>6.394091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>1.168600e+10</td>\n",
+       "      <td>1.066421e+10</td>\n",
+       "      <td>2.744540e+10</td>\n",
+       "      <td>4815</td>\n",
+       "      <td>44</td>\n",
+       "      <td>2560.0</td>\n",
+       "      <td>6.386166</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>1.425943e+10</td>\n",
+       "      <td>1.054386e+10</td>\n",
+       "      <td>2.757694e+10</td>\n",
+       "      <td>5199</td>\n",
+       "      <td>44</td>\n",
+       "      <td>5446.0</td>\n",
+       "      <td>6.487891</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>3.318452e+10</td>\n",
+       "      <td>1.148782e+10</td>\n",
+       "      <td>3.115318e+10</td>\n",
+       "      <td>5754</td>\n",
+       "      <td>50</td>\n",
+       "      <td>8481.0</td>\n",
+       "      <td>6.422264</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>1.418178e+10</td>\n",
+       "      <td>1.069296e+10</td>\n",
+       "      <td>3.030480e+10</td>\n",
+       "      <td>5089</td>\n",
+       "      <td>45</td>\n",
+       "      <td>5638.0</td>\n",
+       "      <td>6.429018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>8.690472e+10</td>\n",
+       "      <td>1.117158e+10</td>\n",
+       "      <td>2.961007e+10</td>\n",
+       "      <td>5125</td>\n",
+       "      <td>29</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>6.379710</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>1.395318e+10</td>\n",
+       "      <td>1.098970e+10</td>\n",
+       "      <td>2.977597e+10</td>\n",
+       "      <td>4900</td>\n",
+       "      <td>23</td>\n",
+       "      <td>3746.0</td>\n",
+       "      <td>6.297238</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>3.040313e+09</td>\n",
+       "      <td>1.380580e+09</td>\n",
+       "      <td>4.357318e+09</td>\n",
+       "      <td>1392</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3774.0</td>\n",
+       "      <td>5.919753</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>2.931237e+10</td>\n",
+       "      <td>4.329346e+09</td>\n",
+       "      <td>1.211961e+10</td>\n",
+       "      <td>3778</td>\n",
+       "      <td>35</td>\n",
+       "      <td>3975.0</td>\n",
+       "      <td>6.399091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>7.954418e+10</td>\n",
+       "      <td>7.190990e+09</td>\n",
+       "      <td>1.789156e+10</td>\n",
+       "      <td>4757</td>\n",
+       "      <td>44</td>\n",
+       "      <td>1291.0</td>\n",
+       "      <td>6.492969</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>4.304218e+10</td>\n",
+       "      <td>7.809360e+09</td>\n",
+       "      <td>1.882849e+10</td>\n",
+       "      <td>4202</td>\n",
+       "      <td>26</td>\n",
+       "      <td>5010.0</td>\n",
+       "      <td>6.368310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>3.152015e+11</td>\n",
+       "      <td>7.325715e+09</td>\n",
+       "      <td>1.605843e+10</td>\n",
+       "      <td>2223</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5210.0</td>\n",
+       "      <td>6.304545</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    year        budget  gross_us_canada  gross_world_wide  nominations  \\\n",
+       "0   2005  1.553998e+10     8.567808e+09      1.796892e+10         3045   \n",
+       "1   2006  2.200316e+10     8.978477e+09      1.929106e+10         3329   \n",
+       "2   2007  8.466157e+09     8.879567e+09      2.036523e+10         3259   \n",
+       "3   2008  1.085565e+10     9.469791e+09      2.188477e+10         3386   \n",
+       "4   2009  9.698641e+09     1.036045e+10      2.394694e+10         3664   \n",
+       "5   2010  1.104976e+10     1.004622e+10      2.441087e+10         4204   \n",
+       "6   2011  3.729829e+10     7.472151e+09      1.988084e+10         2851   \n",
+       "7   2012  6.613154e+09     1.985591e+09      4.990062e+09         2212   \n",
+       "8   2013  1.888163e+10     9.731557e+09      2.488176e+10         4201   \n",
+       "9   2014  1.168600e+10     1.066421e+10      2.744540e+10         4815   \n",
+       "10  2015  1.425943e+10     1.054386e+10      2.757694e+10         5199   \n",
+       "11  2016  3.318452e+10     1.148782e+10      3.115318e+10         5754   \n",
+       "12  2017  1.418178e+10     1.069296e+10      3.030480e+10         5089   \n",
+       "13  2018  8.690472e+10     1.117158e+10      2.961007e+10         5125   \n",
+       "14  2019  1.395318e+10     1.098970e+10      2.977597e+10         4900   \n",
+       "15  2020  3.040313e+09     1.380580e+09      4.357318e+09         1392   \n",
+       "16  2021  2.931237e+10     4.329346e+09      1.211961e+10         3778   \n",
+       "17  2022  7.954418e+10     7.190990e+09      1.789156e+10         4757   \n",
+       "18  2023  4.304218e+10     7.809360e+09      1.882849e+10         4202   \n",
+       "19  2024  3.152015e+11     7.325715e+09      1.605843e+10         2223   \n",
+       "\n",
+       "    oscars    votes    rating  \n",
+       "0       42  11291.0  6.246690  \n",
+       "1       51  13794.0  6.314013  \n",
+       "2       45  13020.0  6.313183  \n",
+       "3       47  14657.0  6.252698  \n",
+       "4       55  10982.0  6.320792  \n",
+       "5       54  14756.0  6.286851  \n",
+       "6       29   6515.0  6.176098  \n",
+       "7       22   8230.0  6.243503  \n",
+       "8       59  11874.0  6.394091  \n",
+       "9       44   2560.0  6.386166  \n",
+       "10      44   5446.0  6.487891  \n",
+       "11      50   8481.0  6.422264  \n",
+       "12      45   5638.0  6.429018  \n",
+       "13      29   2000.0  6.379710  \n",
+       "14      23   3746.0  6.297238  \n",
+       "15      10   3774.0  5.919753  \n",
+       "16      35   3975.0  6.399091  \n",
+       "17      44   1291.0  6.492969  \n",
+       "18      26   5010.0  6.368310  \n",
+       "19       0   5210.0  6.304545  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -846,12 +1105,13 @@
     "    'rating': 'mean'\n",
     "}).reset_index()\n",
     "\n",
-    "print(grouped_data_full)"
+    "# Check the calculations\n",
+    "grouped_data_full\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,8 +1125,15 @@
     "grouped_data_full['avg_rating_change'] = grouped_data_full['rating'].pct_change() * 100\n",
     "\n",
     "# Update DataFrame to only contain percent change values\n",
-    "grouped_data = grouped_data_full[['budget_change', 'gross_us_change', 'gross_world_change', 'nominations_change', 'oscars_change', 'votes_change', 'avg_rating_change']]\n",
-    "grouped_data = grouped_data.drop(index=0).reset_index(drop=True)\n",
+    "grouped_data = grouped_data_full[[\n",
+    "    'budget_change',\n",
+    "    'gross_us_change',\n",
+    "    'gross_world_change',\n",
+    "    'nominations_change',\n",
+    "    'oscars_change',\n",
+    "    'votes_change',\n",
+    "    'avg_rating_change'\n",
+    "]].drop(index=0).reset_index(drop=True)\n",
     "\n",
     "# Export to csv for sqlite db file\n",
     "grouped_data.to_csv('Data/heatmap.csv')"
